7768
a variation:
```scala
  scala> case class Transition[S](x: S) ;  object C ; (??? : Any)   match  { case Transition(C) => }
    <console>:11: error: pattern type is incompatible with expected type;
     found   : C.type
     required: S
            (??? : Any) match  { case Transition(C) => }
                                                 ^
```
